# verifai

./: .gitignore  ARCHITECTURE.md  FEATURES.md  README.md  main.py  pyproject.toml
examples/simple_alu/: dut_spec.json
examples/simple_alu/rtl/: simple_alu.sv
tests/: test_codegen.py  test_comms.py  test_models.py
uvm_ai/: __init__.py
uvm_ai/agents/: __init__.py  base.py  env_agent.py  orchestrator.py  scoreboard_agent.py  sequence_agent.py  uvm_agent_agent.py
uvm_ai/cli/: __init__.py  interactive.py  main.py
uvm_ai/codegen/: __init__.py  emitter.py  project.py
uvm_ai/comms/: __init__.py  dialogue.py  message_bus.py
uvm_ai/config/: __init__.py  settings.py
uvm_ai/models/: __init__.py  dut_spec.py  messages.py  tb_plan.py  uvm_component.py
uvm_ai/templates/: agent.sv.j2  driver.sv.j2  env.sv.j2  interface.sv.j2  monitor.sv.j2  package.sv.j2  scoreboard.sv.j2  sequence.sv.j2  sequence_item.sv.j2  sequencer.sv.j2  tb_top.sv.j2  test.sv.j2
verifai/: __init__.py
verifai/agents/: __init__.py  base.py  env_agent.py  orchestrator.py  scoreboard_agent.py  sequence_agent.py  uvm_agent_agent.py
verifai/cli/: __init__.py  interactive.py  main.py
verifai/codegen/: __init__.py  emitter.py
verifai/comms/: __init__.py  dialogue.py  message_bus.py
verifai/config/: __init__.py  settings.py
verifai/models/: __init__.py  messages.py  tb_plan.py
verifai/templates/: agent.sv.j2  driver.sv.j2  env.sv.j2  interface.sv.j2  monitor.sv.j2  package.sv.j2  scoreboard.sv.j2  sequence.sv.j2  sequence_item.sv.j2  sequencer.sv.j2  tb_top.sv.j2  test.sv.j2
