[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvm-ai"
version = "0.1.0"
description = "AI-powered UVM testbench generation and verification acceleration"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
uvm-ai = "uvm_ai.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
